# EmbedSearch

./: .gitignore  README.md  pyproject.toml
src/embedsearch/: __init__.py  api.py  chunker.py  cli.py  config.py  db.py  embedder.py  indexer.py  models.py  searcher.py
tests/: test_chunker.py  test_db.py  test_searcher.py
